# finance-visualizer

./: .env.prod  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  example.ledger
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/components/Charts/: BarChart.tsx  LineChart.tsx  TreeMap.tsx  index.tsx
frontend/pages/: consts.ts  index.tsx  utils.ts
frontend/styles/: index.css
src/: handlers.rs  main.rs  model.rs  utils.rs
