[package]
name = "financereports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ledger-parser = "5.1.0"
ledger-utils = "0.2.0"
rust_decimal = "1.20.0"
filetime = "0.2.15"
axum = "0.4.5"
chrono = "0.4.19"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
serde = { version ="1.0.136", features = ["derive"] }
serde_json = "1.0.71"
